# PlunEStim-Client

./: README.md  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  turbo.json
apps/app/: .example.env  .gitignore  README.md  main.py  package.json  pyproject.toml
apps/app/.obsidian/: appearance.json  workspace.json
apps/app/backup/: test.json
apps/app/configurations/: bt_sensors.json  configuration.json  default_usage.json  event_action.json  event_action_prct.json  event_action_profile.json  init_settings.json  usage_limit.json
apps/app/docs/: Events.md  chaster_help.md
apps/app/docs/mechanisms/: Actions.md
apps/app/profile/: A.json  B.json  C.json  D.json  E.json  F.json  G.json  H.json  I.json  J.json  K.json  MODELE.json  Z.json
apps/app/resources/noise_sensor/case/: TTGO_ESP32_BOX_BACK.stl  TTGO_ESP32_BOX_FRONT.stl  esp32-oled-18650-raised.stl  esp32-oled-18650.scad
apps/app/resources/noise_sensor/noise_sensor/: noise_sensor.ino
apps/app/src/: constants.py  main.py
apps/app/src/api/helpers/: __init__.py  generate_magic_token.py  jwt_helpers.py
apps/app/src/api/rest/: __init__.py  admin.py  auth.py  users.py
apps/app/src/api/ws/: websocket_manager.py  (+1 more)
apps/app/src/models/: User.py
apps/app/src/profiles/: __init__.py  profile_module.py
apps/app/src/services/: __init__.py
apps/app/src/store/: store.py
apps/app/src/typings/: __init__.py  action.py
apps/app/src/utils/: __init__.py  calculate_magic_number.py
apps/app/src/views/: __init__.py  page_buttons.py
(+144 files in other folders)
